sylva/base/static/css/base.css
/* ... */
#main #footer.global .inside {
    border-top: solid 1px #DADADA;
    width: 100%;
    padding-top: 15px;
    padding-bottom: 25px;
}

#footer {
    display: block;
}

#main header.global nav.main,#main #footer.global .inside .top {
    float: right;
}

#main #footer.global .inside a {
    color: #555;
    text-decoration: none;
}

#main #footer.global .inside a:hover {
    text-decoration: underline;
}

#content3 {
    /*  width:992px;*/
    min-height: 450px;
    /*  background:#1D5600;*/
    text-align: left;
    padding-top: 0px;
    padding-bottom: 5px;
    overflow: hidden;
}

#content3 p {
    text-align:justify;
    padding-bottom:10px;
}

.content3-block {
    width: 365px;
    float: left;
    margin-left: 1px;
}

.content3-block p {
    width:320px;
    float:left;
    text-align:left;
}

#content2 {
    /*  width:992px;*/
    min-height: 400px;
    /*  background:#1D5600;*/
    text-align: left;
    padding-top: 0px;
    padding-bottom: 5px;
    overflow: hidden;
}

#content2 p {
    text-align:justify;
    padding-bottom:10px;
}

.content2-first {
    width: 347px;
    float: left;
    padding-left: 2px;
}

.content2-second {
    width: 740px;
    float: left;
    padding-left: 30px;
}

.content2-block p {
    width:365px;
    float:left;
    text-align:left;
}

.content-divider {
    background: url(../img/content-divider.gif) no-repeat top center;
    width: 1px;
    min-height: 400px;
    float: left;
    padding: 0px 10px 0px 10px;
}

#content2 .content-divider {
    background: url(../img/content-divider.gif) repeat-y top center;
    width: 1px;
    min-height: 420px;
    float: left;
    padding: 0px 10px 0px 10px;
    margin-top: 0;
}

/* END Layout *****************************************************************/


#element-info {
    overflow: hidden;
    width: 180px;
}

span.buttonLinkOption {
    vertical-align: middle;
    display: inline-block;
    margin-top: 2px;
    margin-left: 2px;
}

span.buttonLinkOption a {
    font-weight: bold;
}

span.buttonLinkLeft,
span.buttonLinkRight {
    float: left;
}

span.buttonLinkRight {
    padding-top: 6px;
    padding-left: 4px;
}

p.forgot-password {
    vertical-align: middle;
    display: inline-block;
    margin-top: 17px;
    margin-left: 2px;
}

#content2 form {
    max-width: initial;
}

#content3 form {
    max-width: initial;
}

#content2 a.delete-row {
    background: url(../img/recycle-full.png) no-repeat center 15px;
    height: 45px;
    display: block;
    padding: 0 0 0 2px;
    font-weight: bold;
}

#content3 a.delete-row {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    margin-top: 18px;
    position: absolute;
}

#content3 .delete-rowupFiles {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: -105px;
}

#content3 .delete-rowupLinks {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: -100px;
}

#content3 .linkDelete,
#content3 .fileDelete {
    margin-top: -41px;
}

#content3 div.relationships a.delete-rowupProps {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: -61px;
}

#content3 div.relationships a.delete-rowup {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: -42px;
}

#content3 div.relationships a.delete-row {
    background: url(../img/recycle-full.png) no-repeat left -2px;
    height: 35px;
    padding: 10px 0 0 30px;
    font-weight: bold;
    float: right;
    position: relative;
    width: 15px;
    margin-top: 0px;
}

#content3 .relationship {
    border-radius: 3px;
    padding: 5px;
    cursor: pointer;
}

#content3 .relationship:hover {
    background-color: #D6E7DF;
}

#content3 .node-properties {
    padding: 5px;
}

#content3 .node-properties dt {
    margin-top: 5px;
}

#content3 .rel-properties dl {
    border-left: 3px solid #DDDDDD;
    margin-bottom: 2px;
    margin-left: 23px;
    margin-top: 6px;
    padding-left: 5px;
}

div.dynamic-form,div.initial {
    margin-bottom: 0px;  /* 15px */
}

/* Formsets relationships */
.relationships div.initial p {
    display: none;
    margin-left: 20px;
    float: none;
}

.relationships div.initial p input[type="text"],
.relationships div.initial p select,
.relationships div.initial p textarea {
    width: 263px;
}

.relationships div.initial p:first-child {
    display: block;
    margin-left: inherit;
}

.relationships div.initial p:first-child label {
    display: none;
}

.relationships div.initial p:first-child input[type="text"],
.relationships div.initial p:first-child select,
.relationships div.initial p:first-child textarea {
    width: 300px;
}

.relationships div.dynamic-form p {
    display: none;
    margin-left: 20px;
    float: none;
}

.relationships div.dynamic-form p input[type="text"],
.relationships div.dynamic-form p select,
.relationships div.dynamic-form p textarea {
    width: 263px;
}

.relationships div.dynamic-form p:first-child {
    display: block;
    margin-left: inherit;
}

.relationships div.dynamic-form p:first-child label {
    display: none;
}

.relationships div.dynamic-form p:first-child input[type="text"],
.relationships div.dynamic-form p:first-child select,
.relationships div.dynamic-form p:first-child textarea {
    width: 300px;
}

.floating {
    float: right;
    position: relative;
/*    width: 15px;*/
}

/* End */
div.initial p:last-child {
    display: none;
}
/* ... */

